# Auto_sports_highlight

./: .gitignore  README.md
SVM_model/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
SVM_model/code/: 1_movie_to_image.ipynb
SVM_model/code/.ipynb_checkpoints/: 1_movie_to_image-checkpoint.ipynb
SVM_model/code/DL_youtube/: DL_fifa.sh  fifa.bat
